--- a/app/package.json
+++ b/app/package.json
@@ -34,6 +34,10 @@
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.7",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.3",
+    "postcss-url": "^7.3.1",
+    "precss": "^3.1.2",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1"
   }
