--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "clean-webpack-plugin": "^0.1.19",
+    "socket.io-client": "^2.0.4",
     "webpack": "^3.11.0",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-chunk-hash": "^0.5.0",
