--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.2",
     "debug": "^3.1.0",
     "express": "^4.16.3",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "socket.io-stream": "^0.9.1"
   }
 }
