--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,9 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "boom": "^7.2.0",
     "debug": "^3.1.0",
     "express": "^4.16.3",
-    "socket.io": "^2.0.4",
-    "socket.io-stream": "^0.9.1"
+    "socket.io": "^2.0.4"
   }
 }
