--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,9 @@
   "name": "video-broadcast-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "source/index.js",
   "scripts": {
-    "start": "DEBUG=vb:* node ./index",
+    "start": "DEBUG=vb:* node ./source/index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Artem Demo",
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "boom": "^7.2.0",
+    "colors": "^1.4.0",
     "debug": "^3.1.0",
     "express": "^4.16.3",
     "socket.io": "^2.0.4"
