--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-webpack-starter",
-  "version": "7.6.0",
-  "description": "Basic packages and scripts to start app developing in react, redux and webpack",
+  "name": "video-broadcast",
+  "version": "1.0.0",
+  "description": "Video broadcast",
   "main": "webpack.config.js",
   "scripts": {
     "start": "webpack-dev-server",
