--- a/app/package.json
+++ b/app/package.json
@@ -38,7 +38,8 @@
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@types/jest": "^25.2.1",
