--- a/app/package.json
+++ b/app/package.json
@@ -42,6 +42,7 @@
     "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
+    "@types/dom-mediacapture-record": "^1.0.4",
     "@types/jest": "^25.2.1",
     "@types/prop-types": "^15.7.3",
     "@types/react": "^16.9.34",
